--- a/vignettes/Intro_to_D3mirt.Rmd
+++ b/vignettes/Intro_to_D3mirt.Rmd
@@ -409,7 +409,7 @@ An example of how the output can be described could be the following.
 
 > As can be seen, the item vector clustering patterns in Figure X indicate the presence of foremost two latent dimensions, one aligned with the $x$-axis and one approaching the $y$-axis.
 > The two dimensions, however, seem to have some within-multidimensional tendencies since they are not completely orthogonal.
-> This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around $\theta = 45$ or higher between the $x$ and $z$-axis.
+> This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around $\theta = 45°$ or higher between the $x$ and $z$-axis.
 
 To get a better understanding of the interrelation of the dimensions, constructs can be added to asses the average angle when grouping items.
 In this example, items have been grouped exploratory, i.e., based on their observed location in the model.
@@ -429,9 +429,9 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> The output in Figure $X$ shows that Compassion ($\theta = 1.710, \phi = 86.486$) and Conformity ($\theta = -2.519,\phi = 28.192$) have some within-multidimensional tendencies.
-> However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710$ and $\theta = -2.519$ respectively).
-> Next, we find Fairness ($\theta = 49.106, \phi = 78.308$) with clear within-multidimensional tendencies with respect to the $x$-axis.
+> The output in Figure $X$ shows that Compassion ($\theta = 1.710°, \phi = 86.486°$) and Conformity ($\theta = -2.519°,\phi = 28.192°$) have some within-multidimensional tendencies.
+> However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710°$ and $\theta = -2.519°$ respectively).
+> Next, we find Fairness ($\theta = 49.106°, \phi = 78.308°$) with clear within-multidimensional tendencies with respect to the $x$-axis.
 > Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
 
 As was mentioned above, the W7Q16 had the most measurement problems of all items in the data.
@@ -452,12 +452,12 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> Figure $X$ shows that item W7Q16 is located at $\theta = 16.083, \phi = 57.473$, which indicates that the item is within-multidimensional with respect to the $x$ and $y$-axis but approaching orthogonal tendencies with respect to the $z$-axis.
+> Figure $X$ shows that item W7Q16 is located at $\theta = 16.083°, \phi = 57.473°$, which indicates that the item is within-multidimensional with respect to the $x$ and $y$-axis but approaching orthogonal tendencies with respect to the $z$-axis.
 > In addition, the directional discrimination further underscores that the item does not seem to measure any particular construct ($DDISC_1 = .656, DDISC_2 = .656, DDISC_3 = .617$).
 > The global discrimination score ($MDISC = .770, MDIFF_{range} = [-4.838, 2.349]$) is also the lowest of all discrimination scores in the model.
 > This, combined, implies that the item in question does not seem to fit the three-dimensional compensatory model used in this analysis.
 > We should also note that item W7Q15 ($MDISC = .923, MDIFF_{range} = [-4.680, 1.051]$) has the second lowest discrimination score.
-> However, the latter item does seem to belong to the Conformity construct when comparing angle orientation ($\theta = -19.436, \phi = 31.516$) and discrimination ($MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
+> However, the latter item does seem to belong to the Conformity construct when comparing angle orientation ($\theta = -19.436°, \phi = 31.516°$) and discrimination ($MDISC = .923, DDISC_1 = .332, DDISC_2 = .912, DDISC_3 = .497$).
 
 ### Other Graphical Options
 
