--- a/README.Rmd
+++ b/README.Rmd
@@ -30,7 +30,7 @@ The $MDIFF$ is interpreted similarly as the difficulty parameter in the unidimen
 
 The $MDISC$ shows the highest level of discrimination an item can achieve in the multidimensional model. In addition, the $MDISC$ score is also visualized in the graphical output by scaling the length of the vector arrows representing the item response functions.
 
-The `D3mirt` can also perform analysis of psychological constructs. Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable. If constructs are used, the output will include reporting of the directional discrimination ($DDISC$) parameter that shows how well the items discriminate under the assumption that they measure one of the constructs used in the analysis. Importantly, while the $MDISC$ represents the maximum level of discrimination in the model, the $DDISC$ represents the local discrimination that makes it possible to compare item discrimination in a specific direction set by teh constructs.
+The `D3mirt` can also perform analysis of psychological constructs. Constructs, in this context, refer to the assumption that a subset of items can measure a higher-order latent variable. If constructs are used, the output will include reporting of the directional discrimination ($DDISC$) parameter that shows how well the items discriminate under the assumption that they measure one of the constructs used in the analysis. Importantly, while the $MDISC$ represents the maximum level of discrimination in the model, the $DDISC$ represents the local discrimination that makes it possible to compare item discrimination in a specific direction set by the constructs.
 
 # Overview
 
@@ -93,7 +93,7 @@ If problems appear with the model identification, please see the package vignett
 
 # 2. D3mirt Model Estimation
 
-The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates. Regarding the latter, spherical coordinates are represented by $\theta$, the vector projection of the vector arrows in the xz-plane, and $\phi$, the positive angle between the y-axis and the vectors (the distance $\rho$ is set to $\rho = 1$). If constructs are used, the function also returns construct direction cosines, spherical coordinates for the construct vector arrows, and $DDISC$ parameters (one index per construct).
+The `D3mirt()` function takes in a data frame with model parameters from a three-dimensional compensatory model and returns an $S3$ object of class `D3mirt` with lists of $a$ and $d$, $MDISC$, and $MDIFF$ parameters, direction cosines, and spherical coordinates. Regarding the latter, spherical coordinates are represented by $\theta$, the vector projection of the vector arrows in the $xz$-plane, and $\phi$, the positive angle between the y-axis and the vectors (the distance $\rho$ is set to $\rho = 1$). If constructs are used, the function also returns construct direction cosines, spherical coordinates for the construct vector arrows, and $DDISC$ parameters (one index per construct).
 
 The three-dimensional compensatory model is specified so that all items load on all three factors in the model, and that the factors are constrained to be orthogonal (see below). The fitting of the model is preferably done with the `mirt::mirt` (Chalmers, 2012) function. Please note very carefully regarding the model specification in the example below.
 
@@ -170,7 +170,7 @@ plotD3mirt(g,
 
 An example of how the output can be described could be as follows.
 
-> > As can be seen, the item vector clustering patterns in Figure X indicate the presence of foremost two latent dimensions, one aligned with the $x$-axis and one approaching the $y$-axis. The two dimensions, however, seem to have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around $\theta = 45°$ or higher between the $x$ and $z$-axis. Moreover, the angles of the constructs informs us that Compassion ($\theta = 1.710°, \phi = 86.486°$) and Conformity ($\theta = -2.519°,\phi = 28.192°$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710°$ and $\theta = -2.519°$ respectively). Next, we find Fairness ($\theta = 49.106°, \phi = 78.308°$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
+> > As can be seen, the item vector clustering patterns in Figure $X$ indicate the presence of foremost two latent dimensions, one aligned with the $x$-axis and one approaching the $y$-axis. The two dimensions, however, seem to have some within-multidimensional tendencies since they are not completely orthogonal. This tendency, however, is much more prominent for the items W7Q11, W7Q12, W7Q13, and W7Q14, being located at around $\theta = 45°$ or higher between the $x$ and $z$-axis. Moreover, the angles of the constructs informs us that Compassion ($\theta = 1.710°, \phi = 86.486°$) and Conformity ($\theta = -2.519°,\phi = 28.192°$) have some within-multidimensional tendencies. However, they are both more or less orthogonal to the $z$-axis ($\theta = 1.710°$ and $\theta = -2.519°$ respectively). Next, we find Fairness ($\theta = 49.106°, \phi = 78.308°$) with clear within-multidimensional tendencies with respect to the $x$-axis. Thus, the output indicates that Compassion and Conformity could be independent constructs but that Fairness seems not to be.
 
 As was mentioned above, the W7Q16 had the most measurement problems of all items in the data. Foremost, the short vector arrows indicate high amounts of model violations. Moreover, the location of the item in the model also indicates that the item is within-multidimensional and that it does not seem to belong to any construct explicitly.
 
